GNU nano 2.1.1 - 2008.04.01

2008-03-31 Chris Allegretta <chrisa@asty.org>
	* global.c: Fix for issues compiling with --enable-tiny and
	  --enable-multibuffer, as reported by Mike Frysinger.
	* files.c: Fix the fact that the insert file prompt text did not
	  properly appears in tiny mode.

2008-03-19  Benno Schulenberg <bensberg@justemail.net>
	* help.c, nano.c: Fix toggle help not being translated, fix allocation
	  issue.

2008-03-19  Chris Allegretta <chrisa@asty.org>
	* gloabl.c: Fix bracket matching sequence to be M-] not M-[, as reported
	  Nick Warne <nick@ukfsn.org>.
	* doc/syntax/Makefile.am - Actually include new syntaxes from Mike, etc
	* debian.nanorc - New debian sources.list config since we're including
	  gentoo, adapted from Milian Wolff <mail@milianw.de>

2008-03-18  Mike Frysinger <vapier@gentoo.org>
	* winio.c: Remove unneeded variable in parse_kbinput()
	* rcfile.c: relocate check_vitals_mapped() function to just above 
	  where it actually gets used and declare it "static void" in the process
	* global.c: only declare nano_justify_msg when justify support is enabled
	* php.nanorc: Php syntax highlighting config
	* tcl.nanorc: Tcl syntax highlighting config
	* gentoo.nanorc: Gentoo syntax highlighting config

2008-03-17  Benno Schulenberg <bensberg@justemail.net>
	* global.c: Fix incorrect first line jump messsage, fix
	  more comments to assist translators
	* winio.c: Fix shortcut labels not being translated.

2008-03-17  Mike Frysinger <vapier@gentoo.org>
	 * */.gitignore: Git ignore files for those running a local git
	   against SVN.

2008-03-16  Benno Schulenberg <bensberg@justemail.net>
	* src/help.c, src/global: Fix help strings no longer being 
	  translated properly.
	* src/global.c, doc/man/nanorc.5: Fix typos and poorlly worded lines
	  in the source and man pages.

2008-03-04  Chris Allegretta <chrisa@asty.org
	* everything: New shortcut backend.  New structs subnfunc
	for menu functions and toggles and sc for shortcut keys, old 